# common

./: .gitignore  CMakeLists.txt  README.md  datetime.cpp  datetime.h  entry.cpp  fss.cpp  fss.h  glob.hpp  hash.cpp  hash.h  hashing.cpp  hashing.h  http.cpp  http.h  keyboard.cpp  keyboard.h  process.cpp  process.h  stl.hpp  str.cpp  str.h  str.hpp  time.cpp  time.h  url.cpp  url.h  web.cpp  web.h
azure/: app_insights.cpp  app_insights.h
config/: config.cpp  config.h
data/: faker.cpp  faker.h
ext/: alg_tracker.cpp  alg_tracker.h  github.cpp  github.h
ext/sigslot/: signal.hpp
win32/: app.cpp  app.h  clipboard.cpp  clipboard.h  cng.cpp  cng.h  gdi.cpp  gdi.h  http.cpp  http.h  img.cpp  img.h  kernel.cpp  kernel.h  monitor.cpp  monitor.h  mutex.cpp  mutex.h  npipe.cpp  npipe.h  ole32.cpp  ole32.h  os.cpp  os.h  perf_counter.cpp  perf_counter.h  popup_menu.cpp  popup_menu.h  process.cpp  process.h  ps.cpp  ps.h  reg.cpp  reg.h  serial_port.cpp  serial_port.h  shell.cpp  shell.h  shell_notify_icon.cpp  shell_notify_icon.h  (+8 more)
