# CMakeList.txt : CMake project for cpp-common, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("cpp-common")

# Add source to this project's executable.
add_executable (cpp-common "entry.cpp" )

# TODO: Add tests and install targets if needed.
